--- a/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
@@ -762,7 +762,7 @@
                     <th>Annual Target</th>
                     <th>Proportionate Target upto the end of month under report</th>
                     <th>Total Disbursement upto the end of previous month</th>
-                    <th>Disburse-ment during the month under report</th>
+                    <th>Disbursement during the month under report</th>
                     <th>Total Disbursement upto the end of the month under report</th>
                     <th>Increase/Deficit</th>
                     <!-- Mutations -->
