--- a/src/app/modules/tour-dairy/tour-dairy-zm/tour-dairy-zm.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-zm/tour-dairy-zm.component.html
@@ -43,6 +43,7 @@
                                 <app-zone-branch-circle (branchZoneCircleData)="getAllData($event)" [form]="gridForm"
                                                         [is_required_circle]="false"
                                                         [should_filter]="false"
+                                                        [show_branch]="true"
                                                         [show_circle]="false"></app-zone-branch-circle>
 
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
