--- a/src/app/modules/tour-dairy/tour-diary-approval-zm/tour-diary-approval-zm.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-approval-zm/tour-diary-approval-zm.component.html
@@ -12,6 +12,7 @@
     </div>
 
     <app-zone-branch-circle (branchZoneCircleData)="getAllData($event)" [form]="gridForm" [is_required_circle]="false"
+                            [show_branch]="true"
                             [should_filter]="false" [show_circle]="false"
                             hidden></app-zone-branch-circle>
 
@@ -163,20 +164,20 @@
                     </thead>
                     <tbody>
                     <tr>
-                        <td  >{{systemGenerated?.RecoveryAmountUpToEOMPD}}</td>
-                        <td  >{{systemGenerated?.RecoveryAmountUpToEOMCD}}</td>
-                        <td  >{{systemGenerated?.RecoveryAmountUpToEOMTotal}}</td>
-                        <td  >{{systemGenerated?.RDuringMonthPD}}</td>
-                        <td  >{{systemGenerated?.RDuringMonthCD}}</td>
-                        <td  >{{systemGenerated?.RDuringMonthTotal}}</td>
-                        <td  >{{systemGenerated?.RBalnceRecoverablePD}}</td>
-                        <td  >{{systemGenerated?.RBalnceRecoverableCD}}</td>
-                        <td  >{{systemGenerated?.RBalnceRecoverableTotal}}</td>
-                        <td  >{{systemGenerated?.RDuringCorrespondingPD}}</td>
-                        <td  >{{systemGenerated?.RDuringCorrespondingCD}}</td>
-                        <td  >{{systemGenerated?.RDuringCorrespondingTotal}}</td>
-                        <td  >{{systemGenerated?.RecIncreaseDecrease}}</td>
-                        <td  >
+                        <td>{{systemGenerated?.RecoveryAmountUpToEOMPD}}</td>
+                        <td>{{systemGenerated?.RecoveryAmountUpToEOMCD}}</td>
+                        <td>{{systemGenerated?.RecoveryAmountUpToEOMTotal}}</td>
+                        <td>{{systemGenerated?.RDuringMonthPD}}</td>
+                        <td>{{systemGenerated?.RDuringMonthCD}}</td>
+                        <td>{{systemGenerated?.RDuringMonthTotal}}</td>
+                        <td>{{systemGenerated?.RBalnceRecoverablePD}}</td>
+                        <td>{{systemGenerated?.RBalnceRecoverableCD}}</td>
+                        <td>{{systemGenerated?.RBalnceRecoverableTotal}}</td>
+                        <td>{{systemGenerated?.RDuringCorrespondingPD}}</td>
+                        <td>{{systemGenerated?.RDuringCorrespondingCD}}</td>
+                        <td>{{systemGenerated?.RDuringCorrespondingTotal}}</td>
+                        <td>{{systemGenerated?.RecIncreaseDecrease}}</td>
+                        <td>
                             <ul>
                                 <li>Reschedulement</li>
                                 <li>Restructring of Installments</li>
