--- a/src/app/modules/tour-dairy/tour-diary-approval-zc/tour-diary-approval-zc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-approval-zc/tour-diary-approval-zc.component.html
@@ -228,7 +228,20 @@
             </div>
 
         </div>
-
+        <div class="row mt-2 mr-1">
+            <div class="col-lg-12 text-right">
+                <button (click)="changeStatus('A')" class="mr-2" color="primary" mat-raised-button type="button">
+                    <mat-icon class="mr-2">check_circle</mat-icon>
+                    Approve
+                </button>
+                <button (click)="changeStatus('R')"
+                        class="mat-focus-indicator btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger"
+                        color="danger" mat-raised-button type="button">
+                    <mat-icon class="mr-2"> clear_all</mat-icon>
+                    Referback
+                </button>
+            </div>
+        </div>
 
     </div>
 
