--- a/src/app/modules/tour-dairy/tour-dairy-zm/tour-dairy-zm.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-zm/tour-dairy-zm.component.html
@@ -42,6 +42,7 @@
 
                                 <app-zone-branch-circle (branchZoneCircleData)="getAllData($event)" [form]="gridForm"
                                                         [is_required_circle]="false"
+                                                        [is_required_branch]="true"
                                                         [should_filter]="false"
                                                         [show_branch]="true"
                                                         [show_circle]="false"></app-zone-branch-circle>
