--- a/src/app/modules/tour-dairy/tour-diary-approval-zm/tour-diary-approval-zm.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-approval-zm/tour-diary-approval-zm.component.html
@@ -12,6 +12,7 @@
     </div>
 
     <app-zone-branch-circle (branchZoneCircleData)="getAllData($event)" [form]="gridForm" [is_required_circle]="false"
+                            [is_required_branch]="true"
                             [show_branch]="true"
                             [should_filter]="false" [show_circle]="false"
                             hidden></app-zone-branch-circle>
