--- a/src/app/modules/tour-dairy/tour-diary-approval-zc/tour-diary-approval-zc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-approval-zc/tour-diary-approval-zc.component.html
@@ -202,7 +202,7 @@
                 <table class="table ">
                     <thead>
                     <tr class="table-header-background text-center">
-                        <th colspan="5">
+                        <th colspan="6">
                             Deposits
                         </th>
                     </tr>
@@ -211,6 +211,7 @@
                         <th>Proportionate Target</th>
                         <th>Achievement Percentage</th>
                         <th>Deposit Balance during corresponding period</th>
+                        <th>Deposit Balance during period</th>
                         <th>Increase/Deficit</th>
                     </tr>
                     </thead>
@@ -220,6 +221,7 @@
                         <td>{{systemGenerated?.DepProportionateTarget}}</td>
                         <td>{{systemGenerated?.DepAcchivementPercentage}}</td>
                         <td>{{systemGenerated?.DepCorrespondingPeriod}}</td>
+                        <td>{{systemGenerated?.DepBalnceDuringPeriod}}</td>
                         <td>{{systemGenerated?.DepIncreaseDecrease}}</td>
                     </tr>
 
