--- a/src/app/modules/tour-dairy/tour-diary-bm/tour-diary-bm.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-bm/tour-diary-bm.component.html
@@ -581,7 +581,7 @@
                             <table class="table ">
                                 <thead>
                                 <tr class="table-header-background text-center">
-                                    <th colspan="5">
+                                    <th colspan="6">
                                         Deposits
                                     </th>
                                 </tr>
@@ -589,8 +589,8 @@
                                     <th class="border-r border-gray-400">Annual Target</th>
                                     <th class="border-r border-gray-400">Proportionate Target</th>
                                     <th class="border-r border-gray-400">Achievement Percentage</th>
-                                    <th class="border-r border-gray-400">Deposit Balance during corresponding period
-                                    </th>
+                                    <th class="border-r border-gray-400">Deposit Balance during corresponding period</th>
+                                    <th class="border-r border-gray-400">Deposit Balance during period</th>
                                     <th class="border-r border-gray-400">Increase/Deficit</th>
                                 </tr>
                                 </thead>
@@ -600,6 +600,7 @@
                                     <td class="border-r border-gray-400">{{systemGenerated?.DepProportionateTarget}}</td>
                                     <td class="border-r border-gray-400">{{systemGenerated?.DepAcchivementPercentage}}</td>
                                     <td class="border-r border-gray-400">{{systemGenerated?.DepCorrespondingPeriod}}</td>
+                                    <td class="border-r border-gray-400">{{systemGenerated?.DepBalnceDuringPeriod}}</td>
                                     <td class="border-r border-gray-400">{{systemGenerated?.DepIncreaseDecrease}}</td>
                                 </tr>
 
