--- a/src/app/modules/tour-dairy/tour-diary-pc/tour-diary-pc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-pc/tour-diary-pc.component.html
@@ -425,16 +425,16 @@
                         <td class="border-r border-gray-400">{{systemGenerated?.ProportionatTargetPD}}</td>
                         <td class="border-r border-gray-400">{{systemGenerated?.ProportionatTargetCD}}</td>
                         <td class="border-r border-gray-400">{{systemGenerated?.ProportionatTargetTotal}}</td>
-                        <td class="border-r border-gray-400">{{systemGenerated?.RecoveryTargetPD}}</td>
-                        <td class="border-r border-gray-400">{{systemGenerated?.RecoveryTargetCD}}</td>
-                        <td class="border-r border-gray-400">{{systemGenerated?.RecoveryTargetTotal}}</td>
-                        <td class="border-r border-gray-400">{{systemGenerated?.BalanceRecoverabletPD}}</td>
-                        <td class="border-r border-gray-400">{{systemGenerated?.BalanceRecoverableCD}}</td>
-                        <td class="border-r border-gray-400">{{systemGenerated?.BalanceRecoverableTotal}}</td>
+                        <td class="border-r border-gray-400">{{systemGenerated?.RDuringMonthPD}}</td>
+                        <td class="border-r border-gray-400">{{systemGenerated?.RDuringMonthCD}}</td>
+                        <td class="border-r border-gray-400">{{systemGenerated?.RDuringMonthTotal}}</td>
+                        <td class="border-r border-gray-400">{{systemGenerated?.RBalnceRecoverablePD}}</td>
+                        <td class="border-r border-gray-400">{{systemGenerated?.RBalnceRecoverableCD}}</td>
+                        <td class="border-r border-gray-400">{{systemGenerated?.RBalnceRecoverableTotal}}</td>
                         <td class="border-r border-gray-400">{{systemGenerated?.RDuringCorrespondingPD}}</td>
                         <td class="border-r border-gray-400">{{systemGenerated?.RDuringCorrespondingCD}}</td>
                         <td class="border-r border-gray-400">{{systemGenerated?.RDuringCorrespondingTotal}}</td>
-                        <td class="border-r border-gray-400">{{systemGenerated?.IncreaseDeficit}}</td>
+                        <td class="border-r border-gray-400">{{systemGenerated?.RecIncreaseDecrease}}</td>
                     </tr>
                     </tbody>
                 </table>
