--- a/src/app/modules/tour-dairy/tour-diary-approval-zc/tour-diary-approval-zc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-approval-zc/tour-diary-approval-zc.component.html
@@ -187,8 +187,7 @@
                         <td>{{systemGenerated?.RecIncreaseDecrease}}</td>
                         <td>
                             <ul>
-                                <li>Reschedulement</li>
-                                <li>Restructring of Installments</li>
+                                <li>Reschedulement/Restructring of Installments</li>
                                 <li>RightOff/remission</li>
                             </ul>
                         </td>
