--- a/src/app/modules/tour-dairy/tour-diary-approval-zm/tour-diary-approval-zm.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-approval-zm/tour-diary-approval-zm.component.html
@@ -114,8 +114,7 @@
                         <td>{{systemGenerated?.NoOfZeroRecoveryCases}}</td>
                         <td>
                             <ul>
-                                <li>Reschedulement</li>
-                                <li>Restructring of Installments</li>
+                                <li>Reschedulement/Restructring of Installments</li>
                                 <li>RightOff/remission</li>
                             </ul>
                         </td>
