--- a/src/app/modules/tour-dairy/tour-diary-bm/tour-diary-bm.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-bm/tour-diary-bm.component.html
@@ -565,8 +565,7 @@
                                     <td class="border-r border-gray-400">{{systemGenerated?.RecIncreaseDecrease}}</td>
                                     <td class="border-r border-gray-400">
                                         <ul>
-                                            <li>Reschedulement</li>
-                                            <li>Restructring of Installments</li>
+                                            <li>Reschedulement/Restructring of Installments</li>
                                             <li>RightOff/remission</li>
                                         </ul>
                                     </td>
