--- a/src/app/modules/tour-dairy/tour-dairy-zm/tour-dairy-zm.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-zm/tour-dairy-zm.component.html
@@ -456,7 +456,16 @@
                                             <li>RightOff/remission</li>
                                         </ul>
                                     </td>
-                                    <td></td>
+                                    <td>
+<!--                                        <ul>-->
+<!--                                            <li></li>-->
+<!--                                            -->
+<!--                                            <li></li>-->
+<!--                                        </ul>-->
+                                        <p>{{systemGenerated?.LoanCasesReschRemissionActivity}}</p>
+                                        <hr style="width:100%;">
+                                        <p>{{systemGenerated?.LoanCasesReschRemissionNO}}</p>
+                                    </td>
                                 </tr>
                                 </tbody>
                             </table>
