--- a/src/app/modules/tour-dairy/tour-diary-approval-bm/tour-diary-approval-bm.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-approval-bm/tour-diary-approval-bm.component.html
@@ -257,7 +257,8 @@
                                     <td class="border-r border-gray-400">{{systemGenerated?.RecIncreaseDecrease}}</td>
                                     <td class="border-r border-gray-400">
                                         <ul>
-                                            <li>Reschedulement/Restructring of Installments</li>
+                                            <li>Reschedulement</li>
+                                            <li>Restructring of Installments</li>
                                             <li>RightOff/remission</li>
                                         </ul>
                                     </td>
