--- a/src/app/modules/tour-dairy/tour-diary-approval-zc/tour-diary-approval-zc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-approval-zc/tour-diary-approval-zc.component.html
@@ -191,7 +191,11 @@
                                 <li>RightOff/remission</li>
                             </ul>
                         </td>
-                        <td></td>
+                        <td>
+                            <p>{{systemGenerated?.LoanCasesReschRemissionActivity}}</p>
+                            <hr style="width:100%;">
+                            <p>{{systemGenerated?.LoanCasesReschRemissionNO}}</p>
+                        </td>
                     </tr>
                     </tbody>
                 </table>
