--- a/src/app/modules/tour-dairy/tour-diary-approval-zm/tour-diary-approval-zm.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-approval-zm/tour-diary-approval-zm.component.html
@@ -179,12 +179,15 @@
                         <td>{{systemGenerated?.RecIncreaseDecrease}}</td>
                         <td>
                             <ul>
-                                <li>Reschedulement</li>
-                                <li>Restructring of Installments</li>
+                                <li>Reschedulement/Restructring of Installments</li>
                                 <li>RightOff/remission</li>
                             </ul>
                         </td>
-                        <td></td>
+                        <td>
+                            <p>{{systemGenerated?.LoanCasesReschRemissionActivity}}</p>
+                            <hr style="width:100%;">
+                            <p>{{systemGenerated?.LoanCasesReschRemissionNO}}</p>
+                        </td>
                     </tr>
                     </tbody>
                 </table>
