--- a/src/app/modules/user-management/apk-deployment/apk-deployment.component.html
+++ b/src/app/modules/user-management/apk-deployment/apk-deployment.component.html
@@ -22,14 +22,14 @@
     <div id="Kt-portlet-margin-top">
         <div class="collapse show" id="collapseExample">
 
-            <div class="card card-body mt-2">
+            <div  [formGroup]="Form" class="card card-body mt-2">
                 <div class="col-lg-12 pt-2">
                     <div class="flex" style="flex-wrap: wrap;">
 
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mr-4" style="width: 225px;">
                             <div class="d-grid">
                                 <mat-label class="customMatLabel mb-2">Upload File:</mat-label>
-                                <input (change)="onFileChange($event)" accept="image/png, image/jpg, image/jpeg, video/mp4, video/webm, video/mkv, application/pdf, .apk"
+                                <input formControlName="file" (change)="onFileChange($event)" accept="image/png, image/jpg, image/jpeg, video/mp4, video/webm, video/mkv, application/pdf, .apk"
                                        type="file">
                             </div>
 
@@ -81,29 +81,131 @@
 
 
     </div>
-    <div class="row mt-2">
-        <div class="col-lg-12 p-0">
-            <table class="table table-striped mb-0 ">
-                <thead>
-                <tr class="table-header-background text-center">
-                    <th class="border-r">File</th>
-                    <th class="border-r">Action</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td class="border-r"></td>
-                    <td class="border-r">
-                        <!--                        <button mat-icon-button color="primary"-->
-                        <!--                                (click)="downloadFile()">-->
-                        <!--                            <mat-icon title="download">file_download</mat-icon>-->
-                        <!--                        </button>-->
-                    </td>
-                </tr>
-                </tbody>
-            </table>
+<!--    <div class="row mt-2">-->
+<!--        <div class="col-lg-12 p-0">-->
+<!--            <table class="table table-striped mb-0 ">-->
+<!--                <thead>-->
+<!--                <tr class="table-header-background text-center">-->
+<!--                    <th class="border-r">File</th>-->
+<!--                    <th class="border-r">Action</th>-->
+<!--                </tr>-->
+<!--                </thead>-->
+<!--                <tbody>-->
+<!--                <tr *ngFor="let data of response">-->
+<!--                    <td>{{data?.FileName}}</td>-->
+<!--                    <td>{{data?.URL}}-->
+
+<!--                    <button (click)="edit(data)"-->
+<!--                            *ngIf="checkStatus(mcoDiary, 'edit') && currentActivity?.U && edit_mode"-->
+<!--                            class="ml-2" color="primary"-->
+<!--                            mat-icon-button-->
+<!--                    >-->
+<!--                        <mat-icon>-->
+<!--                            Download-->
+<!--                        </mat-icon>-->
+<!--                    </button>-->
+<!--                    <button (click)="delete(mcoDiary,'C')"-->
+<!--                            *ngIf="checkStatus(mcoDiary, 'delete') && currentActivity?.D && edit_mode"-->
+<!--                            mat-icon-button>-->
+<!--                        <mat-icon class="text-red-500">-->
+<!--                            delete_forever-->
+<!--                        </mat-icon>-->
+<!--                    </button>-->
+
+<!--                    </td>-->
+<!--                </tr>-->
+<!--                <tr >-->
+<!--                    <td class="border-r"></td>-->
+<!--                    <td class="border-r">-->
+<!--                        &lt;!&ndash;                        <button mat-icon-button color="primary"&ndash;&gt;-->
+<!--                        &lt;!&ndash;                                (click)="downloadFile()">&ndash;&gt;-->
+<!--                        &lt;!&ndash;                            <mat-icon title="download">file_download</mat-icon>&ndash;&gt;-->
+<!--                        &lt;!&ndash;                        </button>&ndash;&gt;-->
+<!--                    </td>-->
+<!--                </tr>-->
+<!--                </tbody>-->
+<!--            </table>-->
+
+<!--        </div>-->
+<!--    </div>-->
+    <div class="flex flex-auto overflow-auto">
+
+        <!-- Products list -->
+        <div class="flex flex-auto border shadow-xs rounded-sm bg-gray-50 overflow-auto"
+             style="flex-direction: column;">
+            <div [style.height]="gridHeight" class="flex flex-col flex-auto  overflow-auto">
+                <mat-table
+                    #sort1="matSort"
+                    #table
+                    [dataSource]="dataSource | paginate: {itemsPerPage: itemsPerPage, currentPage: pageIndex, totalItems: totalItems}"
+                    matSort
+                    matSortActive="id"
+                    matSortDirection="asc"
+                    matSortDisableClear>
+
+                    <!--                    <ng-container matColumnDef="BranchName">-->
+                    <!--                        &lt;!&ndash; ATTRIBUTE mat-sort-header  for sorting | https://material.angular.io/components/sort/overview &ndash;&gt;-->
+                    <!--                        <mat-header-cell *matHeaderCellDef mat-sort-header>Branch Name</mat-header-cell>-->
+                    <!--                        <mat-cell *matCellDef="let loanutilization">{{loanutilization.BranchName}}</mat-cell>-->
+                    <!--                    </ng-container>-->
+
+
+
+                    <ng-container matColumnDef="File">
+                        <mat-header-cell *matHeaderCellDef mat-sort-header>File</mat-header-cell>
+                        <mat-cell *matCellDef="let data">{{data.Description}}</mat-cell>
+                    </ng-container>
+
+<!--                    *ngIf="currentActivity?.C"-->
+                    <ng-container matColumnDef="Actions">
+                        <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
+                        <mat-cell *matCellDef="let data">
+                            <button (click)="downloadFile(data?.FilePath)" color="primary"
+                                    mat-icon-button>
+                                <mat-icon style="margin-left: 1px;" title="download apk">file_download</mat-icon>
+                            </button>
+
+<!--                            <button (click)="downloadFile(data)" color="primary"-->
+<!--                                    mat-icon-button>-->
+<!--                                <mat-icon style="margin-left: 1px;" title="View loanutilization">add</mat-icon>-->
+<!--                            </button>-->
+                        </mat-cell>
+                    </ng-container>
+
+                    <mat-header-row *matHeaderRowDef="displayedColumns;sticky:true;"
+                                    class="table-header-background"></mat-header-row>
+
+                    <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+
+                </mat-table>
+
+
+                <div *ngIf="!loading && !matTableLenght" class="mat-table__message">No records found</div>
+                <div *ngIf="loading" class="mat-table__message">Please wait....</div>
+
+            </div>
+
 
         </div>
-    </div>
 
+    </div>
+    <div class="mat-select" style="padding:0px 5px; font-size: 13px; margin-top:10px;">
+        <span class="font-bold text-green">Items per page:</span>
+
+        <mat-select (valueChange)="paginate(1,$event)" [(value)]="itemsPerPage" class="border-2 pl-1 py-2"
+                    display="inline"
+                    style="width: 50px; margin-left: 15px; display: inline-block; margin-right: 10px;">
+            <mat-option [value]="5">5</mat-option>
+            <mat-option [value]="10">10</mat-option>
+            <mat-option [value]="25">25</mat-option>
+            <mat-option [value]="50">50</mat-option>
+            <mat-option [value]="100">100</mat-option>
+        </mat-select>
+        <button (click)="paginate(1)">First</button>
+        <pagination-controls (pageChange)="paginate($event)" display="inline"
+                             style="display: inline-block;"></pagination-controls>
+        <button (click)="paginate(Math.ceil(totalItems/itemsPerPage))">Last</button>
+        <p style="float:right;">Total <b class="text-green">{{totalItems}}</b> items</p>
+
+    </div>
 </div>
