Re register bio metric initial page created

--- a/src/app/modules/user-management/reregister-biometric/reregister-biometric.component.html
+++ b/src/app/modules/user-management/reregister-biometric/reregister-biometric.component.html
@@ -35,9 +35,7 @@
                                 <mat-form-field appearance="outline" class="mat-form-field-fluid w-full">
                                     <mat-label>PPNO</mat-label>
                                     <input appNumberOnly autocomplete="off" formControlName="PPNO"
-                                           matInput
-                                           maxlength="100" placeholder="Enter Customer Name">
-                                    <!--  <mat-error *ngIf="hasError('CustomerName', 'required')">CustomerName <strong>required</strong></mat-error>-->
+                                           matInput placeholder="Enter PPNO">
                                 </mat-form-field>
                             </div>
                         </div>
