--- a/src/app/modules/user-management/enable-disable-device-mapping/enable-disable-device-mapping.component.html
+++ b/src/app/modules/user-management/enable-disable-device-mapping/enable-disable-device-mapping.component.html
@@ -34,9 +34,9 @@
                             <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                                 <mat-form-field appearance="outline" class="mat-form-field-fluid w-full">
                                     <mat-label>PPNO</mat-label>
-                                    <input appAlphabetOnly autocomplete="off" formControlName="PPNO"
+                                    <input appNumberOnly autocomplete="off" formControlName="PPNO"
                                            matInput
-                                           maxlength="100" placeholder="Enter Customer Name">
+                                           maxlength="100" placeholder="Enter PPNO">
                                     <!--  <mat-error *ngIf="hasError('CustomerName', 'required')">CustomerName <strong>required</strong></mat-error>-->
                                 </mat-form-field>
                             </div>
@@ -47,7 +47,7 @@
                                 <button
                                     class=" mt-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary bg-gray-500"
                                     mat-raised-button
-                                    type="button">
+                                    type="button"   (click)="searchDevice(true)">
                                     <mat-icon class="mr-2">search</mat-icon>
                                     Search
                                 </button>
@@ -74,26 +74,17 @@
                        matSortActive="id"
                        matSortDirection="asc" matSortDisableClear>
 
-                <ng-container matColumnDef="PPNO">
+                <ng-container matColumnDef="Description">
                     <!-- ATTRIBUTE mat-sort-header  for sorting | https://material.angular.io/components/sort/overview -->
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>PPNO</mat-header-cell>
-                    <mat-cell *matCellDef="let request">{{request?.PPNO}}</mat-cell>
+                    <mat-header-cell *matHeaderCellDef mat-sort-header>Description</mat-header-cell>
+                    <mat-cell *matCellDef="let request">{{request?.Description}}</mat-cell>
                 </ng-container>
 
-
-                <!--<ng-container matColumnDef="CustomerNumber">
-         <mat-header-cell *matHeaderCellDef mat-sort-header>Customer Number</mat-header-cell>
-         <mat-cell *matCellDef="let customer">{{customer.CustomerNumber}}</mat-cell>
-        </ng-container>-->
-
-                <ng-container matColumnDef="Details">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>Details</mat-header-cell>
-                    <mat-cell *matCellDef="let request">{{request.Text}}</mat-cell>
-                </ng-container>
-
-                <ng-container matColumnDef="Action">
+                <ng-container matColumnDef="Actions">
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Action</mat-header-cell>
-                    <mat-cell *matCellDef="let request"></mat-cell>
+                    <mat-cell *matCellDef="let request">
+                        <mat-checkbox ></mat-checkbox>
+                    </mat-cell>
                 </ng-container>
 
                 <mat-header-row *matHeaderRowDef="displayedColumns;sticky:true;" class="table-header-background">
@@ -102,8 +93,8 @@
                 <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
             </mat-table>
 
-            <div *ngIf="!loading && dataSource.data?.length==0" class="mat-table__message">No records found</div>
-            <div *ngIf="loading" class="mat-table__message p-3 text-green">Please wait....</div>
+<!--            <div *ngIf="!loading && dataSource.data?.length==0" class="mat-table__message">No records found</div>-->
+<!--            <div *ngIf="loading" class="mat-table__message p-3 text-green">Please wait....</div>-->
 
 
         </div>
