Re register bio metric initial page created

--- a/src/app/modules/user-management/business-leads/business-leads.component.html
+++ b/src/app/modules/user-management/business-leads/business-leads.component.html
@@ -108,6 +108,7 @@
 
                                     <mat-form-field appearance="outline" class="mat-form-field-fluid w-full">
                                         <input autocomplete="off" formControlName="OtherReason" matInput
+                                               placeholder="Other Reason"
                                         />
                                     </mat-form-field>
                                 </div>
