Re register bio metric initial page created

--- a/src/app/modules/journal-voucher/search-jv/search-jv.component.html
+++ b/src/app/modules/journal-voucher/search-jv/search-jv.component.html
@@ -176,7 +176,7 @@
                         </button>
                         <button (click)="viewMap(jvocher)" *ngIf="checkMap(jvocher)" color="primary"
                                 mat-icon-button>
-                            <mat-icon title="view location of loan">location_on</mat-icon>
+                            <mat-icon title="view location">location_on</mat-icon>
                         </button>
                     </mat-cell>
                 </ng-container>
